[package]
name = "gh-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
