[package]
name = "gh-mirror"
version = "0.1.0"
edition = "2021"
authors = ["Bill Fraser <wfraser@codewise.org>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
